--- a/app/src/main/res/layout/allmenu_recycler_items.xml
+++ b/app/src/main/res/layout/allmenu_recycler_items.xml
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Free Delivery"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/all_menu_deliverytime"
         app:layout_constraintStart_toEndOf="@+id/all_menu_deliverytime"
         app:layout_constraintTop_toTopOf="@+id/all_menu_deliverytime" />
@@ -91,7 +91,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="166"
+        android:text="2500"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
