main :: changed activity_main text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:drawableLeft="@drawable/ic_search_black_24dp"
         android:drawablePadding="16dp"
         android:ems="10"
-        android:hint="Search..."
+        android:hint="Recherchez..."
         android:inputType="textPersonName"
         android:paddingStart="16dp"
         android:singleLine="true"
@@ -59,7 +59,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Popular this Week"
+        android:text="Populaire cette semaine"
         android:textColor="#333333"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="Recommened for You"
+        android:text="Recommenedez pour vous"
         android:textColor="#333333"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/open_sans_bold"
-        android:text="All Menu Items"
+        android:text="Menu"
         android:textColor="#333333"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
