--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -5,7 +5,7 @@
     <solid android:color="#ffffff" />
 
     <!-- Border Color -->
-    <stroke android:width="1dp" android:color="#ff9900" />
+    <stroke android:width="1dp" android:color="#DCDCDC" />
 
     <!-- Round Corners -->
     <corners android:radius="5dp" />
