main :: imported logout image

--- a/app/src/main/res/layout/activity_home_client.xml
+++ b/app/src/main/res/layout/activity_home_client.xml
@@ -24,6 +24,15 @@ xmlns:android="http://schemas.android.com/apk/res/android" >
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/logout_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/send_file"
+        android:layout_marginRight="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/cart_image"
+        app:layout_constraintTop_toTopOf="@+id/cart_image" />
+
+    <ImageView
         android:id="@+id/cart_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
