main :: fix this fucking bug

--- a/app/src/main/res/layout/activity_home_gerant.xml
+++ b/app/src/main/res/layout/activity_home_gerant.xml
@@ -7,11 +7,19 @@
     tools:context=".HomeGerant">
 
     <TextView
-        android:layout_width="74dp"
-        android:layout_height="16dp"
-        android:text="Gerant App"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Liste des Commandes"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/logout_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/send_file"
+        android:layout_marginRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
